# pulsar

./: .gitignore  BRANDING.md  README.md
.github/workflows/: deploy-backend.yml
.next/: trace  trace-build
backend/: .env.sample  Dockerfile  pyproject.toml
backend/src/finance/: main.py
backend/src/finance/api/: api.py  auth.py  crypto.py  deps.py  doviz.py  financials.py  heatmap.py  market.py  portfolio.py  ratelimit.py  terminal.py  watchlist.py  ws.py
backend/src/finance/core/: config.py  exceptions.py  handlers.py
backend/src/finance/database/: connections.py
backend/src/finance/events/: main.py
backend/src/finance/models/: auth.py  response.py  schemas.py
backend/src/finance/services/: alpaca.py  cache.py  finnhub_service.py  stream.py  worker.py
backend/src/finance/services/providers/: __init__.py  alpaca_provider.py  base.py  crypto_provider.py  doviz_provider.py  registry.py
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/api/: authentication.md  crypto.md  doviz.md  endpoints.md  financials.md  market.md  portfolio.md  rate-limiting.md  terminal.md  watchlist.md  websocket.md
docs/architecture/: backend.md  data-flow.md  frontend.md  overview.md  providers.md  state.md  websocket.md
docs/deployment/: cloudflare.md  coolify.md  docker.md  env-vars.md  overview.md  vercel.md
docs/guide/: introduction.md  project-structure.md  quick-start.md
frontend/: .gitignore  next.config.mjs  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/lib/: auth.ts  (+7 more)
(+103 files in other folders)
